# Planning_Jema

./: .gitignore  CMakeLists.txt  version_config.h.in
apps/: CMakeLists.txt  calendarmodel.cpp  main.cpp  planningmodel.cpp  qml.qrc
apps/include/: calendarmodel.h  planningmodel.h
apps/resource/: About.qml  AddEmployee.qml  AddTask.qml  CalendarModel.qml  CalendarView.qml  DatePicker.qml  Header.qml  PButton.qml  SettingDialog.qml  Tile.qml  main.qml
cmake/: FindSQLite3.cmake
include/: employee.h  employeeabstractdata.h  mssqlhandler.h  planning.hpp  planningabstractdata.h  sqliteemployee.h  sqliteplanning.h  wo.h
lib/sqlapi/include/: ssNcliAPI.h
lib/sqlite3/: CMakeLists.txt
src/: CMakeLists.txt  employee.cpp  employeeabstractdata.cpp  mssqlhandler.cpp  planning.cpp  planningabstractdata.cpp  sqliteemployee.cpp  sqliteplanning.cpp  wo.cpp
translate/: planning_software_fr_FR.ts
